Implemented Prim's algorithm.

--- a/GraphDBFS.vcxproj
+++ b/GraphDBFS.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="edge.cpp" />
     <ClCompile Include="graph.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="primMinSpanTree.cpp" />
     <ClCompile Include="search.cpp" />
     <ClCompile Include="vertex.cpp" />
   </ItemGroup>
@@ -83,6 +84,7 @@
     <ClInclude Include="depthFirstSearchRev.h" />
     <ClInclude Include="edge.h" />
     <ClInclude Include="graph.h" />
+    <ClInclude Include="primMinSpanTree.h" />
     <ClInclude Include="search.h" />
     <ClInclude Include="vertex.h" />
   </ItemGroup>
