--- a/GraphDBFS.vcxproj.filters
+++ b/GraphDBFS.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="primMinSpanTree.cpp">
       <Filter>Source Files\algo</Filter>
     </ClCompile>
+    <ClCompile Include="kruskalMinSpanTree.cpp">
+      <Filter>Source Files\algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="edge.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files\algo</Filter>
     </ClInclude>
     <ClInclude Include="primMinSpanTree.h">
+      <Filter>Header Files\algo</Filter>
+    </ClInclude>
+    <ClInclude Include="kruskalMinSpanTree.h">
       <Filter>Header Files\algo</Filter>
     </ClInclude>
   </ItemGroup>
