--- a/GraphDBFS.vcxproj.filters
+++ b/GraphDBFS.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="topoSortShortPath.cpp">
       <Filter>Source Files\algo</Filter>
     </ClCompile>
+    <ClCompile Include="floydShortPath.cpp">
+      <Filter>Source Files\algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="edge.h">
@@ -102,6 +105,9 @@
       <Filter>Header Files\algo</Filter>
     </ClInclude>
     <ClInclude Include="topoSortShortPath.h">
+      <Filter>Header Files\algo</Filter>
+    </ClInclude>
+    <ClInclude Include="floydShortPath.h">
       <Filter>Header Files\algo</Filter>
     </ClInclude>
   </ItemGroup>
