--- a/GraphDBFS.vcxproj
+++ b/GraphDBFS.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="primMinSpanTree.cpp" />
     <ClCompile Include="search.cpp" />
+    <ClCompile Include="shortPath.cpp" />
     <ClCompile Include="topoSortShortPath.cpp" />
     <ClCompile Include="vertex.cpp" />
   </ItemGroup>
@@ -97,6 +98,7 @@
     <ClInclude Include="kruskalMinSpanTree.h" />
     <ClInclude Include="primMinSpanTree.h" />
     <ClInclude Include="search.h" />
+    <ClInclude Include="shortPath.h" />
     <ClInclude Include="topoSortShortPath.h" />
     <ClInclude Include="vertex.h" />
   </ItemGroup>
