--- a/GraphDBFS.vcxproj.filters
+++ b/GraphDBFS.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="autoShortPath.cpp">
       <Filter>Source Files\algo</Filter>
     </ClCompile>
+    <ClCompile Include="shortPath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="edge.h">
@@ -115,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="autoShortPath.h">
       <Filter>Header Files\algo</Filter>
+    </ClInclude>
+    <ClInclude Include="shortPath.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
