--- a/GraphDBFS.vcxproj.filters
+++ b/GraphDBFS.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="viterbiShortPath.cpp">
       <Filter>Source Files\algo</Filter>
     </ClCompile>
+    <ClCompile Include="hungarianAlgorithm.cpp">
+      <Filter>Source Files\algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="edge.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files\algo</Filter>
     </ClInclude>
     <ClInclude Include="viterbiShortPath.h">
+      <Filter>Header Files\algo</Filter>
+    </ClInclude>
+    <ClInclude Include="hungarianAlgorithm.h">
       <Filter>Header Files\algo</Filter>
     </ClInclude>
   </ItemGroup>
