Refactored Hamiltonian path and implemented circuit.

--- a/GraphDBFS.vcxproj.filters
+++ b/GraphDBFS.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="hamiltonPath.cpp">
       <Filter>Source Files\algo</Filter>
     </ClCompile>
+    <ClCompile Include="hamiltonCircuit.cpp">
+      <Filter>Source Files\algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="edge.h">
@@ -144,6 +147,9 @@
       <Filter>Header Files\algo</Filter>
     </ClInclude>
     <ClInclude Include="hamiltonPath.h">
+      <Filter>Header Files\algo</Filter>
+    </ClInclude>
+    <ClInclude Include="hamiltonCircuit.h">
       <Filter>Header Files\algo</Filter>
     </ClInclude>
   </ItemGroup>
