--- a/GraphDBFS.vcxproj
+++ b/GraphDBFS.vcxproj
@@ -78,6 +78,7 @@
     <ClCompile Include="floydShortPath.cpp" />
     <ClCompile Include="fordFulkersonMaxFlow.cpp" />
     <ClCompile Include="graph.cpp" />
+    <ClCompile Include="hamiltonCircuit.cpp" />
     <ClCompile Include="hamiltonPath.cpp" />
     <ClCompile Include="hungarianAlgorithm.cpp" />
     <ClCompile Include="kruskalMinSpanTree.cpp" />
@@ -101,6 +102,7 @@
     <ClInclude Include="floydShortPath.h" />
     <ClInclude Include="fordFulkersonMaxFlow.h" />
     <ClInclude Include="graph.h" />
+    <ClInclude Include="hamiltonCircuit.h" />
     <ClInclude Include="hamiltonPath.h" />
     <ClInclude Include="hungarianAlgorithm.h" />
     <ClInclude Include="kruskalMinSpanTree.h" />
