--- a/GraphDBFS.vcxproj.filters
+++ b/GraphDBFS.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="eulerPath.cpp">
       <Filter>Source Files\algo</Filter>
     </ClCompile>
+    <ClCompile Include="eulerCircuit.cpp">
+      <Filter>Source Files\algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="edge.h">
@@ -156,6 +159,9 @@
       <Filter>Header Files\algo</Filter>
     </ClInclude>
     <ClInclude Include="eulerPath.h">
+      <Filter>Header Files\algo</Filter>
+    </ClInclude>
+    <ClInclude Include="eulerCircuit.h">
       <Filter>Header Files\algo</Filter>
     </ClInclude>
   </ItemGroup>
